Fixed dependencies and made java 21 compatible